# zymic

./: Cargo.toml  DESIGN.md  LICENSE  README.md
.cargo/: config.toml
cli/: Cargo.toml  README.md  build.rs
cli/src/: cli.rs  error.rs  key.rs  lib.rs  main.rs
cli/tests/: cli_tests.rs
core/: Cargo.toml  README.md
core/benches/: stream_bench.rs
core/src/: bytes.rs  error.rs  key.rs  lib.rs  stream.rs
core/tests/: core_tests.rs
xtask/: Cargo.toml
xtask/scripts/: install.sh  uninstall.sh
xtask/src/: main.rs
